# ECSess_core

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_help.txt  configure.bat
Core/ECS/includes/: Entity.ipp  SystemManager.ipp
Core/ECS/src/: Entity.cpp  EntityManager.cpp  SystemManager.cpp  World.cpp
Core/Tools/includes/: Timer.hpp
Core/Tools/includes/Containers/: IndexVector.ipp
ECS/: doc.txt
ECS/Presets/: utils.hpp
ECS/Presets/Components/include/: Coord2dComponent.hpp
ECS/includes/: AComponent.hpp  AComponent.ipp  AECSManager.hpp  AFinalNode.hpp  AManager.hpp  ASystem.hpp  ASystem.ipp  ECSEventManager.hpp  EntityManager.hpp  GroupManager.hpp  SyncIdManager.hpp  SystemManager.hpp  TagManager.hpp  World.hpp
ECS/libs/: ECS
ECS/src/: AComponent.cpp  AFinalNode.cpp  AManager.cpp  ASystem.cpp  ECSEventManager.cpp  Entity.cpp  EntityManager.cpp  SyncIdManager.cpp
Project/: CMakeLists.txt  ECSess.py  configure
Project/ECS/includes/: ECSexceptions.hpp  Entity.hpp
Project/ECS/src/: AECSManager.cpp  GroupManager.cpp  TagManager.cpp
Project/Tools/src/: Timer.cpp
Project/TypeGenerator/: ECSTypes.hpp  generator.py  test.cpp
Project/tests/ECSess_use/: CMakeLists.txt
Serialization/: Makefile  main.cpp  test
Tools/include/: ADlHandle.hpp  ADlHandle.ipp  Convert.hpp  DlHandle.hpp  Messages.hpp  Rect.hpp  UnixDlHandle.hpp  Utils.hpp  Vector.hpp  WinDlHandle.hpp  rtypeRect.hpp  rtypeVector.hpp
Tools/include/Containers/: IndexVector.hpp
Tools/include/Type/: TypeId.hpp  TypeId.ipp
Tools/includes/Containers/: DynVector.hpp  DynVector.ipp
Tools/includes/Type/: TypeId.hpp  TypeId.ipp
Tools/src/: Messages.cpp  TypeId.cpp  UnixDlHandle.cpp  WinDlHandle.cpp
TypeGenerator/: CppUtilities.py  generator.py
